--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,29 +3,55 @@
 @import helper._
 
 @main("Todo list") {
-    
-    <h1>@tasks.size task(s)</h1>
-    
-    <ul>
-        @tasks.map { task =>
-            <li>
-                @task.label
-                
-                @form(routes.Application.deleteTask(task.id)) {
-                    <input type="submit" value="Delete">
-                }
-            </li>
-        }
-    </ul>
-    
-    <h2>Add a new task</h2>
-    
-    @form(routes.Application.newTask) {
-        
-        @inputText(taskForm("label")) 
-        
-        <input type="submit" value="Create">
-        
-    }
+    <h1>TODO List</h1>
+    <h3>@tasks.size task(s)</h3>
+    Pending tasks
+    <div class="row">
+            <table class="table table-condensed table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            #
+                        </th>
+                        <th>
+                            Label
+                        </th>
+                        <th>
+                            Actions
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @tasks.map { task =>
+                    <tr>
+                        <td>
+                            @task.id
+                        </td>
+                        <td>
+                            @task.label
+                        </td>
+                        <td>
+                             @form(routes.Application.deleteTaskForms(task.id)) {
+                                <input type="submit" value="Delete">
+                            }
+                        </td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+    </div>
+
+    <div class="row">
+            <h4>Add a new task</h4>
+            
+            @form(routes.Application.newTaskForms) {
+                <div class="form-group">
+                    @inputText(taskForm("label")) 
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default">
+                </div>
+            }
+    </div>
     
 }
