--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,9 +24,10 @@
 			    </div>
 
 			     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			     	<!--<ul class="nav navbar-nav">
-			     		<li class="active"><a href="#">Link</a></li>
-			     	</ul>-->
+			     	<ul class="nav navbar-nav">
+			     		<li class="active"><a href="@routes.Application.tasksForms">Tasks</a></li>
+                        <li class=""><a href="@routes.Application.usersForms">Users</a></li>
+			     	</ul>
 			     </div>			     
     		</div>
 
