WIP 2.1 issue2. Filtro de tareas de usuario y form funcional.

--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -43,6 +43,7 @@
                             @user.password
                         </td>
                         <td>
+                            <a class="" href="@routes.Application.userTasksForms(user.login)">Tareas</a>
                              <!--@form(routes.Application.deleteTaskForms(user.id)) {
                                 <input type="submit" value="Delete">
                             }-->
