--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -66,6 +66,19 @@
                         }
                     </select>
                 </div>
+                <div class="container">
+                    <div class="row">
+                        <div class='col-sm-6'>
+                            <div class="form-group">
+                                <div class='input-group date' id='datetimepicker1'>
+                                    <input type='text' class="form-control" name="end" data-date-format="YYYY-MM-DD hh:mm:ss" />
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default">
                 </div>
