--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,12 +21,12 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="@routes.Application.tasksForms">PLAY-Todolist</a>
+			      <a class="navbar-brand" href="@routes.Application.tasksForms()">PLAY-Todolist</a>
 			    </div>
 
 			     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			     	<ul class="nav navbar-nav">
-			     		<li class="active"><a href="@routes.Application.tasksForms">Tasks</a></li>
+			     		<li class="active"><a href="@routes.Application.tasksForms()">Tasks</a></li>
                         <li class=""><a href="@routes.Application.usersForms">Users</a></li>
 			     	</ul>
 			     </div>			     
@@ -34,7 +34,7 @@
 
     	</nav>
     	<ol class="breadcrumb">
-		  <li><a href="@routes.Application.tasksForms">Home</a></li>
+		  <li><a href="@routes.Application.tasksForms()">Home</a></li>
 		  <li class="active">TODO List</li>
 		</ol>
     	<div class="container-fluid">
