RESOLVED 3.1 and 3.2 issue3. Added filter functions: user ended and date ended

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,8 @@
-@(tasks: List[Task], taskForm: Form[(String,String, Long)], users: List[Users])
+
 
 @import helper._
+
+@(tasks: List[Task], taskForm: Form[(String,Long,Option[String])], users: List[Users])
 
 @main("Todo list") {
     <h1>TODO List</h1>
