--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@(tasks: List[Task], taskForm: Form[(String,Long,Option[String])], users: List[Users])
+@(tasks: List[Task], taskForm: Form[(String,Long,Long,Option[String])], users: List[Users])
 
 @main("Todo list") {
     <h1>TODO List</h1>
